# rtsp2jpg

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: api.md  architecture.md  configuration.md  contributing.md  deployment.md  index.md  operations.md  overview.md  troubleshooting.md
rtsp2jpg/: __init__.py  app.py  backends.py  cache.py  config.py  db.py  decoder_warnings.py  logging_config.py  worker.py
rtsp2jpg/api/: __init__.py  cameras.py  snapshot.py  status.py
tests/: test_api.py  test_app.py  test_backends.py  test_db.py  test_worker.py
