[project]
name = "rtsp2jpg"
version = "0.1.0"
description = "RTSP to JPEG snapshot service with FastAPI and OpenCV"
readme = "README.md"
authors = [{ name = "Patcharaphon Srida", email = "muc5674@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "opencv-python-headless>=4.10",
  "numpy>=1.26",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/mengsokool/rtsp2jpg"
Repository = "https://github.com/mengsokool/rtsp2jpg"

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["rtsp2jpg"]
